# app_template

./: .gitignore  LICENSES  Makefile  README.md  branch.sh
src/: Cargo.toml  deny.toml
src/.cargo/: config.toml
src/crates/app/: Cargo.toml  index.html
src/crates/app/assets/: manifest.json  sw.js
src/crates/app/src/: app.rs  lib.rs  log_categories.rs  main.rs  tick.rs
src/crates/app/src/menus/: about_menu.rs  mod.rs
src/crates/app/src/menus/debug_menu/: debug.rs
src/crates/app/src/menus/main_menu/: dialogs.rs  file_menu.rs  mod.rs  save_operations.rs
src/crates/app/src/menus/settings_menu/: dock_settings.rs  mod.rs  settings.rs
src/crates/app/src/menus/settings_menu/layout_menu/: layout.rs  mod.rs  name_generator.rs
src/crates/app/src/misc/: fonts.rs  fps_counter.rs  keyboard_shortcuts.rs  mod.rs
src/crates/app/src/tabs/: command.rs  layout_presets.rs  mod.rs  my_tab_viewer.rs
src/crates/app/src/tabs/render/: center_panel.rs  left_panel.rs  mod.rs  right_panel.rs
